Adic. Tela exercícios

--- a/alimentacao.html
+++ b/alimentacao.html
@@ -84,7 +84,7 @@
                     </div>
                   </section>
                 </div>
-                
+
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                   <section class="mb-3">
                     <button class="btn btn-purple-ht btn-block" type="button" data-toggle="collapse" data-target="#collapseJantar" aria-expanded="true" aria-controls="collapseJantar">
@@ -123,13 +123,13 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                   <div class="card pr-5 pb-3 pt-1 mb-2" >
                     <div class="chart-container">
-                      <canvas id="graficoAlimentacao" height="80px">
+                      <canvas id="graficoAlimentacao" height="130px">
                       </canvas>
-                      <canvas id="graficoAlimentacao2" height="60px">
+                      <canvas id="graficoAlimentacao2" height="90px">
                       </canvas>
-                      <canvas id="graficoAlimentacao3" height="60px">
+                      <canvas id="graficoAlimentacao3" height="90px">
                       </canvas>
-                      <canvas id="graficoAlimentacao4" height="60px">
+                      <canvas id="graficoAlimentacao4" height="90px">
                       </canvas>
                     </div>
                   </div>
@@ -141,7 +141,7 @@
             <div class="container d-flex justify-content-around">
                 <a class="btn text-white" href="inicio.html"> <img src="/img/home_white.png" class="icon-size-2" alt="icone de casa"></a>
                 <a class="btn text-white btn-ht-selected" href="alimentacao.html"><img src="/img/fork_purple.png" class="icon-size-2" alt="icone com um garfo e uma colher cruzados"></a>
-                <a class="btn text-white"> <img src="/img/running_white.png" class="icon-size-2" alt="icone health track (uma pessoa correndo)"></a>
+                <a class="btn text-white" href="exercicios.html"> <img src="/img/running_white.png" class="icon-size-2" alt="icone health track (uma pessoa correndo)"></a>
                 <a class="btn text-white"> <img src="/img/weight_white.png" class="icon-size-2" alt="icone de uma balança para pesagem"></a>
                 <a class="btn text-white"> <img src="/img/user_white.png" class="icon-size-2" alt="icone de uma silhueta de uma pessoa"></a>
             </div>
