--- a/inicio.html
+++ b/inicio.html
@@ -104,7 +104,7 @@
         <div class="container d-flex justify-content-around">
             <a class="btn text-white btn-ht-selected" href="inicio.html"> <img src="/img/home_purple.png" class="icon-size-2" alt="icone de casa"></a>
             <a class="btn text-white" href="alimentacao.html"> <img src="/img/fork_white.png" class="icon-size-2" alt="icone com um garfo e uma colher cruzados"></a>
-            <a class="btn text-white"> <img src="/img/running_white.png" class="icon-size-2" alt="icone health track (uma pessoa correndo)"></a>
+            <a class="btn text-white" href="exercicios.html"> <img src="/img/running_white.png" class="icon-size-2" alt="icone health track (uma pessoa correndo)"></a>
             <a class="btn text-white"> <img src="/img/weight_white.png" class="icon-size-2" alt="icone de uma balança para pesagem"></a>
             <a class="btn text-white"> <img src="/img/user_white.png" class="icon-size-2" alt="icone de uma silhueta de uma pessoa"></a>
         </div>
