Adic. pág. pesagem.html e correções variadas

--- a/alimentacao.html
+++ b/alimentacao.html
@@ -21,22 +21,22 @@
             <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link text-white" href="#">Início</a>
+                        <a class="nav-link text-white" href="inicio.html">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Alimentação</a>
+                        <a class="nav-link text-white" href="alimentacao.html">Alimentação</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Exercícios</a>
+                        <a class="nav-link text-white" href="exercicios.html">Exercícios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Peso</a>
+                        <a class="nav-link text-white" href="pesagem.html">Peso</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Perfil</a>
+                        <a class="nav-link text-white" href="perfil.html">Perfil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Sair</a>
+                        <a class="nav-link text-white" href="index.html">Sair</a>
                     </li>
                 </ul>
             </div>
@@ -153,6 +153,4 @@
         <script type="text/javascript" src="js/Chart.min.js"></script>
         <script type="text/javascript" src="js/htCharts.js"></script>
     </body>
-
-
 </html>
