--- a/criarConta1.html
+++ b/criarConta1.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/ht_styles.css">
         <link rel="stylesheet" href="css/geometry.css">
-        <link rel="stylesheet" href="/open-iconic/font/css/open-iconic-bootstrap.css">
-        <link rel="stylesheet" href="/css/material_input.css">
+        <link rel="stylesheet" href="open-iconic/font/css/open-iconic-bootstrap.css">
+        <link rel="stylesheet" href="css/material_input.css">
     </head>
 
     <body class="nav-purple-ht">
@@ -60,7 +60,7 @@
                                 <a class="btn btn-white-ht btn-lg-ht" href="criarConta2.html">Continuar</a>
                                 <p class="text-white mt-2">Ou</p>
                                 <a class="btn btn-white-ht btn-lg-ht mb-5" href="criarConta2.html">
-                                    <img class="icon-size-1-5 mr-2" src="/img/google_icon.png" alt="icone do google">Continuar com o Google
+                                    <img class="icon-size-1-5 mr-2" src="img/google_icon.png" alt="icone do google">Continuar com o Google
                                 </a>
                             </div>
                         </form>
