--- a/criarConta2.html
+++ b/criarConta2.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/ht_styles.css">
         <link rel="stylesheet" href="css/geometry.css">
-        <link rel="stylesheet" href="/open-iconic/font/css/open-iconic-bootstrap.css">
-        <link rel="stylesheet" href="/css/material_input.css">
-        <link rel="stylesheet" href="/css/material_select.css">
+        <link rel="stylesheet" href="open-iconic/font/css/open-iconic-bootstrap.css">
+        <link rel="stylesheet" href="css/material_input.css">
+        <link rel="stylesheet" href="css/material_select.css">
     </head>
 
     <body class="nav-purple-ht">
@@ -62,7 +62,7 @@
                             </div>
                             <br>
                             <div class="text-center">
-                                <a class="btn btn-white-ht btn-lg-ht">Concluir</a>
+                                <a class="btn btn-white-ht btn-lg-ht" href="inicio.html">Concluir</a>
                             </div>
                         </form>
                     </section>
