--- a/inicio.html
+++ b/inicio.html
@@ -22,22 +22,22 @@
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-white" href="#">Início</a>
+                    <a class="nav-link text-white" href="inicio.html">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Alimentação</a>
+                    <a class="nav-link text-white" href="alimentacao.html">Alimentação</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Exercícios</a>
+                    <a class="nav-link text-white" href="exercicios.html">Exercícios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Peso</a>
+                    <a class="nav-link text-white" href="pesagem.html">Peso</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Perfil</a>
+                    <a class="nav-link text-white" href="perfil.html">Perfil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Sair</a>
+                    <a class="nav-link text-white" href="index.html">Sair</a>
                 </li>
             </ul>
         </div>
@@ -105,8 +105,8 @@
             <a class="btn text-white btn-ht-selected" href="inicio.html"> <img src="/img/home_purple.png" class="icon-size-2" alt="icone de casa"></a>
             <a class="btn text-white" href="alimentacao.html"> <img src="/img/fork_white.png" class="icon-size-2" alt="icone com um garfo e uma colher cruzados"></a>
             <a class="btn text-white" href="exercicios.html"> <img src="/img/running_white.png" class="icon-size-2" alt="icone health track (uma pessoa correndo)"></a>
-            <a class="btn text-white"> <img src="/img/weight_white.png" class="icon-size-2" alt="icone de uma balança para pesagem"></a>
-            <a class="btn text-white"> <img src="/img/user_white.png" class="icon-size-2" alt="icone de uma silhueta de uma pessoa"></a>
+            <a class="btn text-white" href="pesagem.html"> <img src="/img/weight_white.png" class="icon-size-2" alt="icone de uma balança para pesagem"></a>
+            <a class="btn text-white" href="perfil.html"> <img src="/img/user_white.png" class="icon-size-2" alt="icone de uma silhueta de uma pessoa"></a>
         </div>
     </footer>
 
