--- a/inicio.html
+++ b/inicio.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/ht_styles.css">
     <link rel="stylesheet" href="css/geometry.css">
-    <link rel="stylesheet" href="/open-iconic/font/css/open-iconic-bootstrap.css">
-    <link rel="stylesheet" href="/css/Chart.min.css">    
+    <link rel="stylesheet" href="open-iconic/font/css/open-iconic-bootstrap.css">
+    <link rel="stylesheet" href="css/Chart.min.css">    
 </head>
 <body>
     <nav class="navbar navbar-expand-lg nav-purple-ht sticky-top">
@@ -102,11 +102,11 @@
 
     <footer id="sticky-footer" class="py-2 nav-purple-ht fixed-bottom">
         <div class="container d-flex justify-content-around">
-            <a class="btn text-white btn-ht-selected" href="inicio.html"> <img src="/img/home_purple.png" class="icon-size-2" alt="icone de casa"></a>
-            <a class="btn text-white" href="alimentacao.html"> <img src="/img/fork_white.png" class="icon-size-2" alt="icone com um garfo e uma colher cruzados"></a>
-            <a class="btn text-white" href="exercicios.html"> <img src="/img/running_white.png" class="icon-size-2" alt="icone health track (uma pessoa correndo)"></a>
-            <a class="btn text-white" href="pesagem.html"> <img src="/img/weight_white.png" class="icon-size-2" alt="icone de uma balança para pesagem"></a>
-            <a class="btn text-white" href="perfil.html"> <img src="/img/user_white.png" class="icon-size-2" alt="icone de uma silhueta de uma pessoa"></a>
+            <a class="btn text-white btn-ht-selected" href="inicio.html"> <img src="img/home_purple.png" class="icon-size-2" alt="icone de casa"></a>
+            <a class="btn text-white" href="alimentacao.html"> <img src="img/fork_white.png" class="icon-size-2" alt="icone com um garfo e uma colher cruzados"></a>
+            <a class="btn text-white" href="exercicios.html"> <img src="img/running_white.png" class="icon-size-2" alt="icone health track (uma pessoa correndo)"></a>
+            <a class="btn text-white" href="pesagem.html"> <img src="img/weight_white.png" class="icon-size-2" alt="icone de uma balança para pesagem"></a>
+            <a class="btn text-white" href="perfil.html"> <img src="img/user_white.png" class="icon-size-2" alt="icone de uma silhueta de uma pessoa"></a>
         </div>
     </footer>
 
