--- a/perfil.html
+++ b/perfil.html
@@ -43,59 +43,13 @@
         </nav>
 
 
-        <section class="container-fluid">
-            <h4 class="text-center mt-2 mb-4">Controle de peso</h4>    
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center">
-                    <table class="table table-hover table-responsive-sm">
-                        <thead class="btn-purple-ht">
-                            <tr>
-                                <th scope="col"><span class="text-white">Data</span></th>
-                                <th scope="col"><span class="text-white">Peso (kg)</span></th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>05/05/20</td>
-                                <td>86kg</td>
-                                <td><img  class="icon-size-1-3" src="img/pencil-edit-button_purple.png" alt="Ícone de um lápis"></td>
-                                <td><img  class="icon-size-1-3" src="img/trash_purple.png" alt="Ícone de um lápis"></td>
-                            </tr>
-                            <tr>
-                                <td>06/05/20</td>
-                                <td>85kg</td>
-                                <td><img  class="icon-size-1-3" src="img/pencil-edit-button_purple.png" alt="Ícone de um lápis"></td>
-                                <td><img  class="icon-size-1-3" src="img/trash_purple.png" alt="Ícone de um lápis"></td>
-                            </tr>
-                            <tr>
-                                <td>11/05/20</td>
-                                <td>84kg</td>
-                                <td><img  class="icon-size-1-3" src="img/pencil-edit-button_purple.png" alt="Ícone de um lápis"></td>
-                                <td><img  class="icon-size-1-3" src="img/trash_purple.png" alt="Ícone de um lápis"></td>
-                            </tr>
-                        </tbody>
-                        </table>
-                </div>
-
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-5">
-                    <div class="chart-container">
-                        <canvas id="graficoPesagem" height="170px">
-
-                        </canvas>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <footer id="sticky-footer" class="py-2 nav-purple-ht fixed-bottom">
             <div class="container d-flex justify-content-around">
                 <a class="btn text-white" href="inicio.html"> <img src="img/home_white.png" class="icon-size-2" alt="icone de casa"></a>
                 <a class="btn text-white " href="alimentacao.html"><img src="img/fork_white.png" class="icon-size-2" alt="icone com um garfo e uma colher cruzados"></a>
                 <a class="btn text-white " href="exercicios.html"> <img src="img/running_white.png" class="icon-size-2" alt="icone health track (uma pessoa correndo)"></a>
-                <a class="btn text-white btn-ht-selected" href="pesagem.html"> <img src="img/weight_purple.png" class="icon-size-2" alt="icone de uma balança para pesagem"></a>
-                <a class="btn text-white" href="perfil.html"> <img src="img/user_white.png" class="icon-size-2" alt="icone de uma silhueta de uma pessoa"></a>
+                <a class="btn text-white " href="pesagem.html"> <img src="img/weight_white.png" class="icon-size-2" alt="icone de uma balança para pesagem"></a>
+                <a class="btn text-white btn-ht-selected" href="perfil.html"> <img src="img/user_purple.png" class="icon-size-2" alt="icone de uma silhueta de uma pessoa"></a>
             </div>
         </footer>
 
