--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <p class="card-text ml-2 mr-2 mt-1 mb-3 lead font-size-medium">Melhore sua saúde e acompanhe seu progresso de forma leve e fácil</p>
                             <a class="btn btn-purple-ht btn-lg btn-lg-ht text-white" href="criarConta1.html">Inscreva-se</a>
                             <p class="card-text mt-1 lead">Ou</p>
-                            <a class="btn btn-purple-ht btn-lg btn-lg-ht text-white">Entre</a>
+                            <a class="btn btn-purple-ht btn-lg btn-lg-ht text-white" href="inicio.html">Entre</a>
                         </div>
                     </div>
                 </div>
