--- a/login.html
+++ b/login.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" href="css/ht_styles.css">
         <link rel="stylesheet" href="css/geometry.css">
         <link href="open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/material_input.css">
     </head>
-    <body class="body-bg-ht">
+    <body">
         <nav class="navbar navbar-expand-lg nav-purple-ht sticky-top">
             <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu menu-color"></span>
@@ -37,15 +38,30 @@
             <div class="row" >
                 <div class="col-md-4"></div>
                 <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-                    <div class="card text-center">
+                    <div class="card text-center nav-purple-ht">
                         <div class="card-body">
-                            <img class="mx-auto d-block card-img-top icon-size-6" src="img/running_purple.png">
-                            <h1 class="card-title text-center mt-3 mb-2">Health Track</h5>
-                            <p class="card-text ml-4 mr-4 mt-1 mb-3 lead font-size-large">Um app para gerenciar sua vida saudável!</p>
-                            <p class="card-text ml-2 mr-2 mt-1 mb-3 lead font-size-medium">Melhore sua saúde e acompanhe seu progresso de forma leve e fácil</p>
-                            <a class="btn btn-purple-ht btn-lg btn-lg-ht text-white" href="criarConta1.html">Inscreva-se</a>
-                            <p class="card-text mt-1 lead">Ou</p>
-                            <a class="btn btn-purple-ht btn-lg btn-lg-ht text-white" href="login.html">Entre</a>
+                            <img class="mx-auto d-block card-img-top icon-size-3" src="img/running_white.png">
+                            <h1 class="card-title text-center mt-2 mb-1 text-white">Health Track</h1>
+                            <h5 class="text-white text-center">Login</h5>
+                            <form class="">
+                                <div class="input-container ">
+                                    <input id="email" class="input" type="text" required />
+                                    <label class="label" for="email">E-mail:</label>
+                                </div>
+                                <br>
+                                <div class="input-container">
+                                    <input id="password" class="input" type="password" required />
+                                    <label class="label" for="password">Senha:</label>
+                                </div>
+                                <br>
+                                <div class="text-center mt-3">
+                                    <a class="btn btn-white-ht btn-lg-ht" href="inicio.html">Entrar</a>
+                                    <p class="text-white mt-2">Ou</p>
+                                    <a class="btn btn-white-ht btn-lg-ht mb-4" href="inicio.html">
+                                        <img class="icon-size-1-5 mr-2" src="img/google_icon.png" alt="icone do google">Entrar com o Google
+                                    </a>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
